--- a/ConsoleTest.csproj
+++ b/ConsoleTest.csproj
@@ -7,4 +7,10 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Reference Include="System.Windows.Forms">
+        <HintPath>C:\Program Files\dotnet\shared\Microsoft.WindowsDesktop.App\9.0.5\System.Windows.Forms.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
